Fix T40226: Keep collapse-menu when splitting areas